--- a/EnterpriseApplicationKEBD-ejb/nbproject/project.properties
+++ b/EnterpriseApplicationKEBD-ejb/nbproject/project.properties
@@ -36,6 +36,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=EnterpriseApplicationKEBD-ejb.jar
+jars.in.ejbjar=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.mysql-connector-java-5.1.37-bin.jar}
